# eth_unite_defi_2025

./: .gitignore  .gitmodules  DEPLOYMENT_README.md  README.md  SETUP_GUIDE.md  create_order.sh  deploy_full_stack.sh  run-demo  run_comprehensive_demo.sh  run_demo.sh  run_simple_demo.sh  start.sh
.soroban/identity/: my-deployer.toml
.stellar/identity/: my-deployer.toml
.stellar/network/: local.toml
client/: README.md  cross-chain-swap.ts  ethereum-client.ts  index.ts  package.json
client/config/: config.json  production.json
cross-chain-swap/: .gitignore  Cargo.toml  deploy_stellar.sh
cross-chain-swap/contracts/add_extra_contract/: Cargo.toml
cross-chain-swap/contracts/adder_interface/: Cargo.toml
cross-chain-swap/contracts/base-escrow/: Cargo.toml
cross-chain-swap/contracts/base-escrow/src/: base_escrow.rs  lib.rs  test_authentication.rs  test_timelock.rs  test_timelocks.rs  timelocks.rs
cross-chain-swap/contracts/cross-chain-swap/: Cargo.toml
cross-chain-swap/contracts/cross-chain-swap/src/: lib.rs  test.rs
cross-chain-swap/contracts/cross-chain-swap/src/escrow_factory/: escrow_factory.rs  mod.rs  timelocks.rs
cross-chain-swap/contracts/cross-chain-swap/src/escrows/: base_escrow.rs  escrow_dst.rs  escrow_src.rs  mod.rs
cross-chain-swap/contracts/cross-chain-swap/src/merkle_storage_invalidator/: merkle_proof.rs  merkle_storage_invalidator.rs  mod.rs
cross-chain-swap/contracts/cross-chain-swap/src/resolver/: mod.rs  resolver.rs  test_resolver.rs
cross-chain-swap/contracts/dutch-auction/: Cargo.toml
cross-chain-swap/contracts/dutch-auction-interface/: Cargo.toml
cross-chain-swap/contracts/dutch-auction-interface/src/: lib.rs
cross-chain-swap/contracts/dutch-auction/src/: lib.rs  test.rs
cross-chain-swap/contracts/escrow/: Cargo.toml
cross-chain-swap/contracts/escrow-dst/: Cargo.toml
cross-chain-swap/contracts/escrow-dst/src/: lib.rs
cross-chain-swap/contracts/escrow-factory-interface/: Cargo.toml
cross-chain-swap/contracts/escrow-factory-interface/src/: lib.rs
cross-chain-swap/contracts/escrow-src/: Cargo.toml
cross-chain-swap/contracts/escrow-src/src/: lib.rs
cross-chain-swap/contracts/escrow/src/: escrow_dst.rs  escrow_factory.rs  escrow_src.rs  lib.rs  test_authentication.rs  test_escrow_factory.rs  test_timelock.rs  timelocks.rs
cross-chain-swap/contracts/merkle-storage/: Cargo.toml
cross-chain-swap/contracts/merkle-storage/src/: lib.rs  merkle_storage_invalidator.rs  test.rs
cross-chain-swap/contracts/order/: Cargo.toml
cross-chain-swap/contracts/order-interface/: Cargo.toml
cross-chain-swap/contracts/order-interface/src/: lib.rs
cross-chain-swap/contracts/order/src/: consts_trait.rs  lib.rs  maker_traits.rs  maker_traits_test.rs  taker_traits.rs  taker_traits_test.rs  test.rs  xlm_orders.rs  xlm_orders_test.rs
cross-chain-swap/contracts/order/src/dutch_auction/: lib.rs  mod.rs  test.rs
cross-chain-swap/contracts/partial-fills/src/: test.rs
cross-chain-swap/contracts/resolver/: Cargo.toml
cross-chain-swap/contracts/resolver-interface/: Cargo.toml
cross-chain-swap/contracts/resolver-interface/src/: lib.rs
cross-chain-swap/contracts/resolver/src/: lib.rs  test.rs
cross-chain-swap/contracts/test-token/: Cargo.toml  Makefile
cross-chain-swap/contracts/test-token/src/: lib.rs  test_authentication.rs
cross-chain-swap/utils/: Cargo.toml
cross-chain-swap/utils/src/: lib.rs  math.rs
foundry/: foundry.toml
foundry/script/: DeployEscrowFactory.s.sol  DeployTestToken.s.sol  DeployWETH.s.sol
foundry/src/: EscrowFactory.sol
resolver/: README.md
scripts/: evm_utils.sh  run_comprehensive_demo.sh  run_demo.sh  run_simple_demo.sh  run_stages.sh  run_stellar_demo.sh  stellar_utils.sh  utils.sh
