[workspace]
resolver = "2"
members = [
  "contracts/*",
]

[workspace.dependencies]
soroban-sdk = "22.0.8"
order-interface = { path = "contracts/order-interface" }
resolver-interface = { path = "contracts/resolver-interface" }
order = { path = "contracts/order" }
dutch-auction = { path = "contracts/dutch-auction" }
resolver = { path = "contracts/resolver" }
escrow = { path = "contracts/escrow" }
dutch-auction-interface = { path = "contracts/dutch-auction-interface" }


[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
