[package]
name = "hello-world"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
escrow = { path = "../escrow" }
soroban-token-sdk = "22.0.8"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
