[package]
name = "escrow"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
order = { path = "../order" }
base-escrow = { path = "../base-escrow" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
