[package]
name = "resolver-interface"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
order-interface = { workspace = true }
escrow = { path = "../escrow" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
