[package]
name = "resolver"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
resolver-interface = { workspace = true }
order-interface = { workspace = true }
escrow = { path = "../escrow" }
order = { path = "../order" }
base-escrow = { path = "../base-escrow" }
escrow-factory-interface = { workspace = true }
escrow-src = { path = "../escrow-src" }
utils = { path = "../../utils" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
